# esp32p4-android-auto

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  README.ru.md  partitions.csv  partitions_16mb.csv  sdkconfig  sdkconfig.defaults
.claude/skills/build-flash/: SKILL.md
.claude/skills/capture-logs/: SKILL.md
.claude/skills/dashboard-ui/: SKILL.md
.claude/skills/device-screen/: SKILL.md
.claude/skills/head-unit/: SKILL.md
.claude/skills/release/: SKILL.md
Super_VESC_Display/: SCR.txt  SETTINGS_GUI_INTEGRATION.md  Super_VESC_Display.guiguider  lv_conf.h  lv_conf_esp32.h
Super_VESC_Display/custom/: custom.c  custom.h  dashboard_theme.c  dashboard_theme.h  lisp_editor.c  lisp_panel.c  lv_conf_ext.h  realtime_viewer.c  settings_wrapper.c  settings_wrapper.h  theme_dashboard_amber.c  theme_dashboard_amber.h  theme_generic.c  theme_ref.c  trip_statistics.c  vesc_tool_menu.c
Super_VESC_Display/design_handoff_vesc_dashboard/: README.md  VESC Dashboard (Variant A).html  styles.css  variant-classic.jsx
Super_VESC_Display/lvgl-simulator/: Makefile  lv_conf.h
Super_VESC_Display/lvgl/src/extra/libs/qrcode/: lv_qrcode.c
Super_VESC_Display/temp/: board.h
Super_VESC_Display/tools/: build_amber_dashboard.py  build_cockpit_guiguider.py  convert_amber_dseg14.py  patch_amber_polish.py  patch_cockpit_dashboard.py  regen_cockpit_fonts.py
components/bt_agent_fw/: CMakeLists.txt  bt_agent_fw.c
components/c6_ota_partition/: CMakeLists.txt  Kconfig  ota_partition.c  ota_partition.h
components/dev_settings/: CMakeLists.txt  dev_settings.c  vesc_battery_calc.c  vesc_stubs.c  vesc_trip_persist.c
components/dev_settings/include/: dev_settings.h  vesc_battery_calc.h  vesc_trip_persist.h
components/esp32_p4_jc4880p433c_bsp/: .component_hash  .gitignore  CAMERA_INTEGRATION.md  CMakeLists.txt  Kconfig  README.md  WIFI_ARCHITECTURE.md  idf_component.yml  sdkconfig.h
components/esp32_p4_jc4880p433c_bsp/include/bsp/: camera.h  config.h  display.h  esp-bsp.h  touch.h
components/esp32_p4_jc4880p433c_bsp/src/: bsp_camera.c  bsp_display.c  bsp_i2c.c  bsp_touch.c  jc4880p433c_bsp.c
components/esp32_p4_wifi6_touch_lcd_4_3/: esp32_p4_wifi6_touch_lcd_4_3.c
components/esp32_p4_wifi6_touch_lcd_4_3/include/bsp/: esp32_p4_wifi6_touch_lcd_4_3.h
components/log_capture/: CMakeLists.txt  log_capture.c
components/log_capture/include/: log_capture.h
components/qr_info/: CMakeLists.txt  qr_info.c
components/qr_info/include/: qr_info.h
components/trip_log/: CMakeLists.txt  trip_log.c
components/trip_log/include/: trip_log.h
components/vesc_can/: CMakeLists.txt  comm_can.c  vesc_io_data.c  vesc_lisp_code.c  vesc_lisp_panel.c  vesc_lisp_poll.c  vesc_rt_data.c
components/vesc_can/include/vesc_can/: comm_can.h  packet_parser.h  vesc_datatypes.h  vesc_io_data.h  vesc_lisp_code.h  vesc_lisp_panel.h  vesc_lisp_poll.h  vesc_rt_data.h
components/vesc_ui/: CMakeLists.txt
flutter-application/: README.md  pubspec.yaml
flutter-application/android/app/: build.gradle.kts
flutter-application/android/app/src/main/: AndroidManifest.xml
flutter-application/android/app/src/main/kotlin/com/aabridge/aa_bridge/: BleForegroundService.kt  BootReceiver.kt  IconExtractor.kt  MainActivity.kt  MediaListener.kt  NotifListener.kt  WifiBridge.kt
flutter-application/android/app/src/main/res/values/: colors.xml
flutter-application/ios/Runner/: Info.plist
flutter-application/ios/Runner.xcodeproj/: project.pbxproj
flutter-application/lib/: app.dart  coordinator.dart  main.dart
flutter-application/lib/ble/: ble_service.dart  file_manager.dart  file_ops.dart  messages.dart  protocol.dart  uuids.dart
flutter-application/lib/bridge/: foreground_bridge.dart  media_bridge.dart  notification_bridge.dart  wifi_bridge.dart
flutter-application/lib/cache/: icon_hash.dart
flutter-application/lib/firmware/: firmware_updater.dart
flutter-application/lib/i18n/: strings.dart
flutter-application/lib/settings/: app_filter.dart
flutter-application/lib/ui/: about_screen.dart  app_filter_screen.dart  device_files_screen.dart  firmware_update_screen.dart  home_screen.dart  pairing_screen.dart  test_assets.dart  test_panel.dart
lisp/: README.md  main.lisp
main/: CMakeLists.txt  Kconfig.projbuild  aa_frame.c  aa_handshake.c  aa_overclock.c  aa_overclock.h  aa_overlay.c  aa_overlay.h  aa_service.c  ble_files.c  ble_files.h  ble_host.c  ble_nus.c  bt_agent_ota.c  bt_link.c  bt_link.h  c6_ota.c  c6_ota.h  config.h  debug_uart_bridge.c  debug_uart_bridge.h  display_init.c  display_init.h  display_video.c  display_video.h  files_screen.c  files_screen.h  font_song_title_12.c  h264_pipe.c  h264_pipe.h  idf_component.yml  idle_screen.c  idle_screen.h  lv_conf.h  main.c  mdns_advertise.c  mdns_advertise.h  music_info_view.c  music_info_view.h  notif_bridge.c  (+28 more)
main/fonts/: aabridge_font_24.c  aabridge_font_32.c  aabridge_font_38.c  aabridge_font_48.c  aabridge_fonts.h
release/: install.sh
scripts/: capture.sh  capture_all.sh  capture_both.sh  capture_bt.sh  capture_phone.sh  extract_yuv.py  install_app.sh  mid2melody.c  mid2melody.sh  ota_push.sh  uart_debug.py
tools/: pack_fw_blobs.sh
tools/bt_agent/: CMakeLists.txt  README.md  sdkconfig.defaults
tools/bt_agent/main/: CMakeLists.txt  avrcp_mode.c  avrcp_mode.h  main.c  uart_link.c  uart_link.h  wifi_setup_proto.c  wifi_setup_proto.h
